@@ -1,8 +1,9 @@
 6.2.0
-  15-11-18
+  15-11-20
   Feature
   * #i0040: 1st image for list only
   Improvement
+  * #i0043: Quick Shop items: tax property got the new item "without"
   * #i0042: Maximum images per product are increased from 10 to 20
   * #i0041: TCA structure TYPO3 6.x like
   * #i0039: TypoScript: sku will displeayed only, if there is a sku.
